# dnd_nexus-sheet_engine

./: .cursorrules  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .lint.out  CHANGELOG.md  CHECKLIST.md  CLASS_FEATURES_VERIFICATION_REPORT.md  CODE_OF_CONDUCT.md  CODE_QUALITY_AUDIT.md  CONTRIBUTING.md  Console.txt  DESIGN_SCHEMA.md  DIGITALES_GRIMOIRE_UI_KONZEPT.md  LICENSE  PDF_Export_Konzept.md  PERFORMANCE_OPTIMIERUNGEN.md  PHB_VERIFICATION_CORRECTIONS.md  PROJEKTSTRUKTUR.md  PROJEKTZUSAMMENFASSUNG.md  README.md  RELEASE_GUIDE.md  SECURITY.md  WIKI.md  background-data-needs.json  custom_classes verbesserung.md  debug_parser.ts  dnd-nexus.db.backup  dnd-nexus.db.backup_20260115_212034  dnd-nexus.db.backup_pre_release_20260115_213348  dnd-nexus.db.test  export_classes.json  export_classes.md  index.html  items-structure-analysis.json  package.json  phb_extracted_text.txt  pnpm-lock.yaml  start_log.txt  (+8 more)
.antigravity/: Tier1_Cleanup.sql  Tier1_Migration.sql  Tier2_Cleanup.sql  Tier2_Migration.sql  Tier3_Cleanup.sql  Tier3_Migration.sql  final_identity_fix_report.md  math_registry.md  normalization_audit_report.md  run_audit.py  schema_dump.csv  search_integrity_audit.md  suspicious_columns.csv  swarm_bootstrap.md  swarm_context.md
.github/: pull_request_template.md
docs/: BUGFIX_DOPPELTE_PROPERTIES.md  CLASS_FEATURES_VERIFICATION_CONCEPT.md  CLASS_MIGRATION_AND_FEATURES_CONCEPT.md  CLASS_PROGRESSION_TABLES_CONCEPT.md  CLASS_SCHEMA_EXPANSION_CONCEPT.md  COMBAT_PROPERTIES_STATUS.md  COMPENDIUM_CLASSES_SUBMENU_CONCEPT.md  DATABASE_SCHEMA_ANALYSIS_AND_OPTIMIZATION_REPORT.md  FRONTEND_FEATURE_DOCUMENTATION_CONCEPT.md  IMPLEMENTIERUNGSKONZEPT_FEATURE_SYSTEM.md  IMPLEMENTIERUNGSPROMPT_FEATURE_SYSTEM.md  KAMPF_FORMELSAMMLUNG.md  VERBESSERUNGSANALYSE.md  background-extraction-improvements.md  background-starting-equipment-concept.md  custom-backgrounds-structure.md  database-normalization-analysis.md  feature-options-schema-concept.md  hp-management-redesign-concept.md  implementation-roadmap.md  items-structure-recommendation.md  magic-items-import-concept.md  magic-vs-normal-tables-analysis.md  schema-current.md  spell-class-mappings-concept.md  weapon-armor-sorting-concept.md  weapon-properties-display-concept.md  weapon-properties-duplicate-fix-concept.md
exports/: homebrew_items.json  items-without-description.json  items.json  items_names.json  magic-items-import-report.json
migrations/: 202601201232_performance_indexes.sql  202601201232_performance_indexes_rollback.sql
prompts/: 01-initial-project-setup.md  02-database-schema-migrations.md  03-rust-core-logic.md  04-character-crud-commands.md  05-homebrew-crud-commands.md  06-frontend-api-layer.md  07-zustand-store.md  08-character-sheet-components.md  09-main-character-sheet-screen.md  10-pdf-export-command.md  11-file-operations.md  12-main-menu-shortcuts.md  13-pdf-parser-tool.md  14-seed-database.md  15-settings-preferences.md  18-testing-setup.md  (+3 more)
src-tauri/: Cargo.toml  dnd-nexus.db.bak_normalization_tier1  tauri.conf.json  update_view.sql
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  main.rs  menu.rs
src-tauri/src/commands/: character.rs  compendium.rs  features.rs  files.rs  homebrew.rs  logging.rs  mod.rs  pdf.rs  rag.rs  settings.rs  subclasses.rs
src-tauri/src/core/: calculator.rs  mod.rs  modifiers.rs  types.rs  units.rs
src-tauri/src/db/: features.rs  inventory.rs  migrations.rs  mod.rs  modifiers.rs  queries.rs  seed.rs  spells.rs  stats.rs  validation.rs
src-tauri/src/rag/: ingest.rs
src-tauri/src/tools/: data_validator.rs
src-tauri/src/types/: character.rs  compendium.rs  mod.rs  weapons.rs
(+399 files in other folders)
